# mike-ont-adapter-trimming

./: .gitignore  Cargo.toml  README.md
dev/docs/: 2025-12-28_implementation-notes.md
src/: lib.rs
