[package]
name = "ont-trim"
version = "0.1.0"
edition = "2021"
description = "High-performance ONT adapter trimming tool"
authors = ["Michael"]

[[bin]]
name = "ont-trim"
path = "src/bin/ont-trim.rs"

[dependencies]
needletail = "0.5"
rayon = "1.8"
gzp = { version = "0.11", default-features = false, features = ["deflate_rust"] }
clap = { version = "4.5", features = ["derive"] }
bio = "2.0"

[profile.release]
opt-level = 3
lto = true
strip = true
